macros/tests/ui/missing-return.stderr
error: invalid function signature!
  --> $DIR/missing-return.rs:10:1
   |
10 | fn nothing() {}
   | ^^^^^^^^^^^^
